// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots object-list/demo interactive list 1`] = `
<div>
  <div>
    <div
      className="objectlist-row objectlist-row--right objectlist-row--search"
    >
      <div
        className="objectlist--grow"
      >
        <div
          className="objectlist-row"
        >
          <input
            className="objectlist-current-filter__active-status objectlist-input"
            onChange={[Function]}
            placeholder="Search the table below"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="objectlist-row"
      >
        <Select
          className="objectlist-select-filter"
          getOptionLabel={[Function]}
          getOptionValue={[Function]}
          onChange={[Function]}
          onInputChange={[Function]}
          openMenuOnClick={true}
          options={
            Array [
              Object {
                "Renderer": [Function],
                "active": false,
                "filterKey": "email",
                "name": "Email",
              },
            ]
          }
          placeholder="Add Filter"
          styles={
            Object {
              "control": [Function],
              "dropdownIndicator": [Function],
              "multiValue": [Function],
              "multiValueLabel": [Function],
            }
          }
          value={null}
        />
      </div>
    </div>
    <div
      className="objectlist--grow"
    />
    <div
      className="objectlist-row objectlist-row__actions"
    >
      <div
        className="objectlist-column"
      >
        <span
          className="objectlist-results-text"
        >
          258 items found
        </span>
      </div>
      <div
        className="objectlist-column"
      >
        <div
          className="objectlist-dropdown"
        >
          <button
            className="objectlist-button objectlist-button--dropdown objectlist-button--borderless"
          >
            <i
              className="fa fa-list"
            />
             Change columns
          </button>
          <div
            className="objectlist-dropdown__menu objectlist-dropdown__menu--borderless"
          >
            <button
              className="objectlist-dropdown__item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="fa fa-square-o objectlist-dropdown__icon"
              />
              Last Name
            </button>
            <button
              className="objectlist-dropdown__item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="fa fa-square-o objectlist-dropdown__icon"
              />
              IPv6
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="objectlist__overlay"
    />
    <ul
      className="objectlist-list__list"
    >
      <li
        className="objectlist-list__item objectlist-list__item--clickable"
        onClick={[Function]}
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Cecelia
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            cglendzer0@biblegateway.com
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Female
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item objectlist-list__item--clickable"
        onClick={[Function]}
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Jeff
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            jbletsor1@google.es
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Male
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item objectlist-list__item--clickable"
        onClick={[Function]}
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Kessiah
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            kskerman2@npr.org
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Female
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item objectlist-list__item--clickable"
        onClick={[Function]}
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Aubine
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            acanepe3@prweb.com
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Female
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item objectlist-list__item--clickable"
        onClick={[Function]}
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Rowland
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            rwheatman4@about.com
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Male
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item objectlist-list__item--clickable"
        onClick={[Function]}
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Isabeau
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            ifranies5@uol.com.br
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Female
          </div>
        </div>
      </li>
      <li
        className="objectlist-list__item objectlist-list__item--clickable"
        onClick={[Function]}
      >
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            First Name
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Alric
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Email
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            adansey6@wikimedia.org
          </div>
        </div>
        <div
          className="objectlist-list__content"
        >
          <h2
            className="objectlist-list__header"
          >
            Gender
            :
          </h2>
          <div
            className="objectlist-list__body"
          >
            Male
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="objectlist-pagination"
  >
    <ul
      className="objectlist-pagination__pages"
    >
      <li
        className="objectlist-pagination__page disabled"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          ← Previous
        </a>
      </li>
      <li
        className="objectlist-pagination__page active"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          4
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          5
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          6
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          7
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          8
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          9
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          10
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          Next →
        </a>
      </li>
    </ul>
    <p
      className="text-muted"
    >
      <em>
        Showing page 1 of 37 out of 258 total items.
      </em>
    </p>
  </div>
</div>
`;

exports[`Storyshots object-list/demo interactive table 1`] = `
<div>
  <div>
    <div
      className="objectlist-row objectlist-row--right objectlist-row--search"
    >
      <div
        className="objectlist--grow"
      >
        <div
          className="objectlist-row"
        >
          <input
            className="objectlist-current-filter__active-status objectlist-input"
            onChange={[Function]}
            placeholder="Search the table below"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="objectlist-row"
      >
        <Select
          className="objectlist-select-filter"
          getOptionLabel={[Function]}
          getOptionValue={[Function]}
          onChange={[Function]}
          onInputChange={[Function]}
          openMenuOnClick={true}
          options={
            Array [
              Object {
                "Renderer": [Function],
                "active": false,
                "filterKey": "email",
                "name": "Email",
              },
            ]
          }
          placeholder="Add Filter"
          styles={
            Object {
              "control": [Function],
              "dropdownIndicator": [Function],
              "multiValue": [Function],
              "multiValueLabel": [Function],
            }
          }
          value={null}
        />
      </div>
    </div>
    <div
      className="objectlist--grow"
    />
    <div
      className="objectlist-row objectlist-row__actions"
    >
      <div
        className="objectlist-column"
      >
        <span
          className="objectlist-results-text"
        >
          258 items found
        </span>
      </div>
      <div
        className="objectlist-column"
      >
        <div
          className="objectlist-dropdown"
        >
          <button
            className="objectlist-button objectlist-button--dropdown objectlist-button--borderless"
          >
            <i
              className="fa fa-list"
            />
             Change columns
          </button>
          <div
            className="objectlist-dropdown__menu objectlist-dropdown__menu--borderless"
          >
            <button
              className="objectlist-dropdown__item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="fa fa-square-o objectlist-dropdown__icon"
              />
              Last Name
            </button>
            <button
              className="objectlist-dropdown__item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="fa fa-square-o objectlist-dropdown__icon"
              />
              IPv6
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="objectlist-table--scroll"
  >
    <div
      className="objectlist__overlay"
    />
    <table
      className="objectlist-table"
    >
      <thead
        className=""
      >
        <tr>
          <th
            className="objectlist-table__th objectlist-table__th--border-bottom "
            colSpan={undefined}
            rowSpan={1}
            width={undefined}
          >
            <div
              className={undefined}
              onClick={[Function]}
              role="button"
            >
              First Name
            </div>
          </th>
          <th
            className="objectlist-table__th objectlist-table__th--border-bottom "
            colSpan={undefined}
            rowSpan={1}
            width={undefined}
          >
            <div
              className={undefined}
              onClick={[Function]}
              role="button"
            >
              Email
            </div>
          </th>
          <th
            className="objectlist-table__th objectlist-table__th--border-bottom "
            colSpan={undefined}
            rowSpan={1}
            width={undefined}
          >
            <div
              className={undefined}
              onClick={[Function]}
              role="button"
            >
              Gender
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="objectlist-table__row objectlist-table__row--clickable"
          onClick={[Function]}
        >
          <td
            className="objectlist-table__td"
          >
            Cecelia
          </td>
          <td
            className="objectlist-table__td"
          >
            cglendzer0@biblegateway.com
          </td>
          <td
            className="objectlist-table__td"
          >
            Female
          </td>
        </tr>
        <tr
          className="objectlist-table__row objectlist-table__row--clickable"
          onClick={[Function]}
        >
          <td
            className="objectlist-table__td"
          >
            Jeff
          </td>
          <td
            className="objectlist-table__td"
          >
            jbletsor1@google.es
          </td>
          <td
            className="objectlist-table__td"
          >
            Male
          </td>
        </tr>
        <tr
          className="objectlist-table__row objectlist-table__row--clickable"
          onClick={[Function]}
        >
          <td
            className="objectlist-table__td"
          >
            Kessiah
          </td>
          <td
            className="objectlist-table__td"
          >
            kskerman2@npr.org
          </td>
          <td
            className="objectlist-table__td"
          >
            Female
          </td>
        </tr>
        <tr
          className="objectlist-table__row objectlist-table__row--clickable"
          onClick={[Function]}
        >
          <td
            className="objectlist-table__td"
          >
            Aubine
          </td>
          <td
            className="objectlist-table__td"
          >
            acanepe3@prweb.com
          </td>
          <td
            className="objectlist-table__td"
          >
            Female
          </td>
        </tr>
        <tr
          className="objectlist-table__row objectlist-table__row--clickable"
          onClick={[Function]}
        >
          <td
            className="objectlist-table__td"
          >
            Rowland
          </td>
          <td
            className="objectlist-table__td"
          >
            rwheatman4@about.com
          </td>
          <td
            className="objectlist-table__td"
          >
            Male
          </td>
        </tr>
        <tr
          className="objectlist-table__row objectlist-table__row--clickable"
          onClick={[Function]}
        >
          <td
            className="objectlist-table__td"
          >
            Isabeau
          </td>
          <td
            className="objectlist-table__td"
          >
            ifranies5@uol.com.br
          </td>
          <td
            className="objectlist-table__td"
          >
            Female
          </td>
        </tr>
        <tr
          className="objectlist-table__row objectlist-table__row--clickable"
          onClick={[Function]}
        >
          <td
            className="objectlist-table__td"
          >
            Alric
          </td>
          <td
            className="objectlist-table__td"
          >
            adansey6@wikimedia.org
          </td>
          <td
            className="objectlist-table__td"
          >
            Male
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="objectlist-pagination"
  >
    <ul
      className="objectlist-pagination__pages"
    >
      <li
        className="objectlist-pagination__page disabled"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          ← Previous
        </a>
      </li>
      <li
        className="objectlist-pagination__page active"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          4
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          5
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          6
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          7
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          8
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          9
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          10
        </a>
      </li>
      <li
        className="objectlist-pagination__page"
        onClick={[Function]}
      >
        <a
          className="objectlist-pagination__page--link"
          href="#"
        >
          Next →
        </a>
      </li>
    </ul>
    <p
      className="text-muted"
    >
      <em>
        Showing page 1 of 37 out of 258 total items.
      </em>
    </p>
  </div>
</div>
`;
